--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "PosteramaLight";
+  src: local("PosteramaLight"),
+    url(./fonts/881b8da5ad9b82b143ab37dcdf069c4c.woff2) format("woff2");
+}
+@font-face {
+  font-family: "TTCommonsProExpandedMedium";
+  src: local("TTCommonsProExpandedMedium"),
+    url(./fonts/b13d468f88f904752a71651083120b9b.woff2) format("woff2");
+}
+@font-face {
+  font-family: "MyFont3";
+  src: local("MyFont3"),
+    url(./fonts/b46630e470f4040eba7033cf2435edce.woff) format("woff");
+}
+@font-face {
+  font-family: "BogartRegular";
+  src: local("BogartRegular"),
+    url(./fonts/d585e0c0acfc4df0f74473bb69f53fc2.woff2) format("woff2");
+}
+@font-face {
+  font-family: "MyFont5";
+  src: local("MyFont5"),
+    url(./fonts/f8f199f09526f79e87644ed227e0f651.woff2) format("woff2");
+}
+
+h1 {
+  font-family: "BogartRegular";
+  font-size: 130px;
+  font-weight: 400;
+  line-height: 130px;
+}
+
+header p {
+  font-family: "PosteramaLight";
+  font-weight: 400;
+  font-size: 20px;
+}
+
+h2 {
+  font-family: "TTCommonsProExpandedMedium";
+  font-weight: 500;
+  font-size: 24px;
+}
+
+h3 {
+  font-family: "BogartRegular";
+  font-weight: 400;
+  font-size: 47px;
+}
+
+h4 {
+  font-family: "TTCommonsProExpandedMedium";
+  font-weight: 500;
+  font-size: 18px;
+}
+
+p,
+li {
+  font-family: "PosteramaLight";
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+img {
+  object-fit: cover;
+  overflow: clip;
+  overflow-clip-margin: content-box;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+section .left,
+section .right {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+section .flex {
+  display: flex;
+  flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  section {
+    flex-direction: column;
+  }
 }
