--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -35,9 +32,10 @@ body {
 
 h1 {
   font-family: "BogartRegular";
-  font-size: 130px;
+  font-size: 120px;
   font-weight: 400;
   line-height: 130px;
+  margin-top: 20px;
 }
 
 header p {
@@ -48,8 +46,8 @@ header p {
 
 h2 {
   font-family: "TTCommonsProExpandedMedium";
-  font-weight: 500;
-  font-size: 24px;
+  font-weight: 400;
+  font-size: 22px;
 }
 
 h3 {
@@ -75,7 +73,7 @@ li {
 }
 
 img {
-  object-fit: cover;
+  object-fit: contain;
   overflow: clip;
   overflow-clip-margin: content-box;
   width: 100%;
@@ -83,20 +81,42 @@ img {
   position: absolute;
 }
 
-section .left,
-section .right {
+.left,
+.right {
   flex: 1;
   position: relative;
   overflow: hidden;
 }
-
-section .flex {
+.flex {
   display: flex;
   flex-direction: row;
 }
 
+section {
+  padding: 100px;
+}
+
+section.header {
+  padding: 0;
+}
+section.header .left {
+  padding: 40px;
+}
+
+@media (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 768px) {
   section {
-    flex-direction: column;
+    padding: 0;
+  }
+}
+
+@media (min-width: 1400px) {
+  body {
+    padding: 0 30px;
   }
 }
