--- a/src/index.css
+++ b/src/index.css
@@ -103,8 +103,11 @@ section#header img {
 footer {
   background-color: #000;
   color: #fff;
-  text-align: center;
   padding: 20px;
+}
+footer p {
+  text-align: center;
+  font-size: 12px;
 }
 
 .gray {
