--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,10 @@ body {
 
 h1 {
   font-family: "BogartRegular";
-  font-size: 120px;
+  font-size: 110px;
   font-weight: 400;
-  line-height: 130px;
+  line-height: 120px;
+  margin-top: 10px;
 }
 
 #header p {
