--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ h1 {
   font-size: 110px;
   font-weight: 400;
   line-height: 120px;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
 #header p {
@@ -117,6 +117,10 @@ footer p {
 }
 
 @media (max-width: 768px) {
+  h1 {
+    font-size: 60px;
+    line-height: 70px;
+  }
   .flex {
     flex-direction: column;
   }
